chore: Add insurance test enpoints
