# src/configs/swagger-output.json
@@ -8,7 +8,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:3000",
+      "url": "http://localhost:8000",
       "description": "Development server"
     }
   ],
@@ -421,6 +421,19 @@
       }
     },
     "/webhook/": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/createNewIndividual/": {
       "post": {
         "description": "",
         "responses": {
