# src/mainRouter.ts
@@ -8,6 +8,7 @@ import { clientSendMessageFluxRouter, clientSendMessageRouter, hostSendMessageRo
 import { copyTuroVehicleDataRouter, copyTuroVehicleDataServerlessRouter } from '@/routes/turo/copyTuroVehicleData.route';
 import webhookRouter from '@/routes/webhook/webhook.route';
 import { Router } from 'express';
+import insuranceRouter from './routes/insurance/insurance.route';
 import { createUserRouter, getUserByEmailRouter, updateUserRouter, verfiyUserTokenRouter } from './routes/others/firebaseUser.route';
 import getVehicleSpecificDatesRouter from './routes/others/getVehicleSpecificDates.route';
 import { getByZipCodeRouter, getZipCodeRouter } from './routes/others/latLongToZipCodes';
@@ -40,5 +41,6 @@ mainRouter.use('/getUserByEmail', getUserByEmailRouter);
 mainRouter.use('/verifyUserToken', verfiyUserTokenRouter);
 
 mainRouter.use('/webhook', webhookRouter);
+mainRouter.use('/api/v1/createNewIndividual', insuranceRouter);
 
 export default mainRouter;
